# NormallyClosed

./: .dockerignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  RELEASING.md  config.example.toml
.cargo/: config
.github/workflows/: build.yaml  build_and_publish.yaml  security_audit.yaml
images/: logo.psd  thumbnails.sh
root/etc/cont-init.d/: 10-env-check.sh
root/etc/services.d/garage_pie/: run
root/etc/services.d/normally_closed/: run
src/: args.rs  board.rs  board_pins.rs  board_simple.rs  cli.rs  config.rs  garage.rs  gpio.rs  gpio_rpal.rs  gpio_rppal.rs  http.rs  main.rs  mqtt.rs  pi.rs  sync.rs
