[package]
name = "garage_pie"
version = "0.1.0"
authors = ["Jake Wharton <garage-pie@jakewharton.com>"]
edition = "2018"
license = "Apache 2.0"

[dependencies]
rppal = "0.11"
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
warp = { version = "0.3", default-features = false }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
