[package]
name = "normally-closed"
version = "0.1.0"
authors = ["Jake Wharton <normally-closed@jakewharton.com>"]
edition = "2018"
license = "Apache 2.0"

[features]
default = ["rpi"]
rpi = ["rppal"]

[dependencies]
rppal = { version = "0.11", optional = true }
structopt = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros"] }
warp = { version = "0.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
async-trait = "0.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
